# projm

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  ISA.md  PRODUCT.md  README.md  dist-workspace.toml  skills-lock.json
.cargo/: config.toml
.github/workflows/: aur-publish.yml  ci.yml  main.yml  release.yml  tauri-release.yml
.impeccable/critique/: 2026-05-29T23-21-22Z__app-app-settings-page-tsx.md
.next/: trace  trace-build
.next/cache/: .previewinfo  .rscinfo
.next/types/: routes.d.ts  validator.ts
.omo/run-continuation/: ses_18964a2b9ffey9V6m1Q1x8ZuOG.json  ses_189ced127ffecYJKpttjQtozQp.json  ses_189f4419bffeapMNxjr4KwDjZS.json  ses_18b9775f1ffeQ5kZG5rK05fSAk.json
Plans/: mossy-plotting-fog.md  synthetic-wobbling-forest.md  vivid-greeting-swing.md
app/: AGENTS.md  package-lock.json  package.json
app/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/app/diagnostics/: page.tsx
app/app/projects/: page.tsx
app/app/scan/: page.tsx
app/app/settings/: page.tsx
app/components/: add-project-dialog.tsx  app-sidebar.tsx  appearance-controls.tsx  project-tabs.tsx  scan-panel.tsx  settings-panel.tsx  settings-updater.tsx  theme-switcher.tsx  titlebar.tsx  update-checker.tsx  view-controller.tsx
app/components/ui/: dropdown.tsx  runner-panel.tsx  terminal.tsx
app/hooks/: use-theme.ts
app/lib/: themes.ts  view-prefs.ts
crates/projm-cli/: AGENTS.md  Cargo.toml
crates/projm-cli/src/: blueprints.rs  completions.rs  init_setup.rs  main.rs  main_cli.rs  rules_cmd.rs
crates/projm-cli/tests/: rules_cli_tests.rs
crates/projm-cli/wix/: main.wxs
crates/projm-core/: AGENTS.md  Cargo.toml
crates/projm-core/src/: agents.rs  blueprints.rs  check.rs  classify.rs  clone.rs  config.rs  editors.rs  env_hygiene.rs  external_term.rs  go.rs  lib.rs  marker.rs  organize.rs  prefs.rs  rules.rs  rules_edit.rs  run.rs  shell.rs  status.rs
crates/projm-core/src/runner/: discover.rs  mod.rs  process.rs  tui.rs
crates/projm-core/tests/: classify_tests.rs  clone_tests.rs  editors_tests.rs  marker_tests.rs  organize_tests.rs  prefs_tests.rs  rules_edit_tests.rs  rules_tests.rs
docs/superpowers/specs/: 2026-05-22-blueprint-edit-delete-design.md  2026-05-22-blueprints-design.md  2026-05-22-clone-repo-design.md  2026-05-22-custom-rules-design.md  2026-05-22-env-check-command-design.md  2026-05-22-environment-diagnostics-design.md  2026-05-22-git-integration-design.md  2026-05-22-monorepo-support-design.md  2026-05-22-universal-language-support-design.md  2026-05-23-content-category-design.md  2026-05-29-embedded-terminal-design.md  2026-05-29-interactive-init-onboarding-design.md  2026-05-29-projm-run-v0.7-design.md  2026-05-30-cross-platform-shell-setup-design.md  2026-07-07-rules-engine-v2-design.md  2026-07-07-terminal-shell-integration-design.md
packaging/aur/projm-bin/: .SRCINFO  .gitignore  PKGBUILD
scripts/: build-all.sh  install-deps.sh
src/: blueprints.rs  classify.rs  clone.rs  completions.rs  editors.rs  go.rs  init_setup.rs  lib.rs  main.rs  main_cli.rs  organize.rs  prefs.rs  rules.rs  run.rs
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  shell_init.rs
src-tauri/src/scripts/: bashrc.bash  init.fish  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
tests/: blueprints_tests.rs  classify_tests.rs  clone_tests.rs  editors_tests.rs  organize_tests.rs  prefs_tests.rs  rules_tests.rs
