[package]
name = "projm"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ZAAFHachemrachid/projm"
readme = "README.md"
keywords = ["cli", "projects", "navigator", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
description = "Project organizer and fuzzy navigator for developers — classify, group, and jump to projects from the terminal"


[[bin]]
name = "projm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
console = "0.16.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
