[workspace]
resolver = "2"
members = [
    "crates/projm-core",
    "crates/projm-cli",
    "src-tauri",
]

[workspace.package]
version = "0.7.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/ZAAFHachemrachid/projm"
authors = ["Rachid Zaaf <[rachidzaaf9@gmailcom]>"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
