[package]
name = "projm-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Desktop GUI for projm — project organizer and navigator"

[lib]
name = "projm_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "projm-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
projm_core = { path = "../crates/projm-core" }
