[package]
name = "projm_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for projm — project organizer and navigator"
readme = "../../README.md"

[[bin]]
name = "projm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3.1.1"
console = "0.16.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
projm_core = { path = "../projm-core" }
