[package]
name = "projm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for projm — project organizer and navigator"
readme = "../../README.md"

[package.metadata.wix]
upgrade-guid = "27CEBBA0-C4AB-418F-BE7E-9C8B39DDE8AC"
path-guid = "844DD3D5-723D-4117-8E50-C2090347F799"
license = false
eula = false

[[bin]]
name = "projm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3.1.1"
console = "0.16.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
projm_core = { path = "../projm-core", version = "0.11.0" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
