[package]
name = "projm_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for projm — project classification, organization, and navigation"

[dependencies]
anyhow = "1"
colored = "3.1.1"
command-group = "5"
console = "0.16.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
globset = "0.4"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
toml_edit = "0.25"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
